# bolao-copa-do-mundo-2026

./: README.md  pyproject.toml
src/: api_test.ipynb  create_results.ipynb  word_to_forms.ipynb
